view employee details

--- a/src/app/employee/delete-confirm-box/delete-confirm-box.component.html
+++ b/src/app/employee/delete-confirm-box/delete-confirm-box.component.html
@@ -1,6 +1,6 @@
 <!-- delete model -->
-<div class="bg-white p-3 position-absolute top-50 start-50">
-    <div>
+<div class="position-absolute translate-middle start-50 top-50">
+    <div class="bg-white p-3 ">
         <div class="d-flex justify-content-between align-items-center">
             <h6 class="me-4">Please confirm..</h6>
             <span type="button" class="bi bi-x-lg"   (click)="dismiss()"></span>
