--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -5,7 +5,7 @@
         <div class="position-relative d-flex">
             <label class="bi bi-search position-absolute top-50 ms-4 translate-middle text-secondary"
                 for="search"></label>
-            <input type="text" class="py-1 px-5 form-control rounded-0 rounded-start" id="search" />
+            <input type="text" class="py-1 px-5 form-control rounded-0 rounded-start" id="search" [(ngModel)]="search" />
             <button class="btn btn-primary p-0 py-1 rounded-0 rounded-end px-4">
                 Search
             </button>
@@ -48,11 +48,12 @@
                 <span class="bi bi-filter text-primary fs-4"></span>
                 <span class="text-secondary text-nowrap px-1">Short By</span>
             </div>
-            <select class="form-select" aria-label="Default select example">
-                <option selected>Name</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
+            <select class="form-select" aria-label="Default select example" >
+                <option selected value="">Gender</option>
+                <option *ngFor="let gander of gander">
+                 {{gander.name}}
+                </option>
+               
             </select>
         </div>
     </div>
@@ -60,7 +61,7 @@
     <div class="flex-grow-1 overflow-auto">
     <section class="mt-4">
         <div class="row mb-5" >
-            <div class="col-lg-6" *ngFor="let item of employeeList">
+            <div class="col-lg-6" *ngFor="let item of employeeList | filter:search">
                 <div class="card p-2 mt-2">
                     <div class="d-flex align-items-center">
                         <div class="profile-image  w-150px h-200px d-flex justify-content-center overflow-hidden ">
