--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -8,7 +8,7 @@
       <img src="./../../../assets/images/image-thomas.jpg" width="100%" />
     </div>
     <div class="pe-5 ps-2">
-      <span class="bi bi-chevron-down text-primary fw-bolder "></span>
+      <span class="bi bi-chevron-down text-primary fw-bolder " (click)="profileMenu()"></span>
     </div>
   </div>
 </header>
