--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -44,10 +44,9 @@
         <div class="d-flex align-items-center">
             <div class="d-flex align-items-center">
                 <span class="bi bi-filter text-primary fs-4"></span>
-                <span class="text-secondary text-nowrap px-1">Short By</span>
+                <span class="text-secondary text-nowrap px-1">Short By Gender</span>
             </div>
             <select class="form-select" aria-label="Default select example" (change)="shortingByGender($event)">
-                <option selected value="" disabled>Gender</option>
                 <option *ngFor="let gender of gender" >
                  {{gender.name}}
                 </option>
